# adaptive-learning-agent

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  content_generator.py  prompts.py  socratic.py  tutor.py
assessment/: __init__.py  diagnostic.py  evaluator.py  questions.py
content/: __init__.py  genetics_content.json  problems.json  topics.py
data/learners/: .gitkeep  demo_user.json  sushant.json
state/: __init__.py  learner.py  session.py  storage.py
tests/: test_assessment.py  test_state.py  test_tutor.py
