[project]
name = "adaptive-learning-agent"
version = "0.1.0"
description = "A personalized AI tutor that can teach ANY topic using the Socratic method"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tutor = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
